<resources>

    <string name="hello_world">Hello world!</string>

    <string name="title_activity_configuracion">configuracion</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_graficas">Graficas</string>

    <string name="app_name">FlexBean</string>
    <string name="action_settings">Settings</string>
    <string name="configurar">Configurar</string>
    <string name="conectar">Conectar</string>
    <string name="capturar">Capturar</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_graficas_pro">GraficasPro</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_historial">Historial</string>


    <!--  Textos en ingles -->
    <string name="bluetooth1">Bluetooth enabled</string>
    <string name="bluetooth2">Bluetooth Off</string>
    <string name="Conectando">Connecting</string>
    <string name="lpm"> Beats per minute</string>
    <string name="tiempo">Time</string>

    <!-- Barra de menu-->
    <string name="promedio">Average</string>
    <string name="perfil">Profile</string>
    <string name="Pantallazo">Screenshot</string>

    <!-- Alerta de guardade de pantallazo -->
    <string name="Guardado"> Screenshot saved in</string>

    <string name="reporte"> Generate PDF report</string>

    <!--Elementos del reporte -->
    <string name="minuto">Minute reading</string>

    <string name="historial">History</string>
    <string name="herramientas">Tools</string>

    <string name="compartir">Share</string>
    <string name="compartirI">Means for sharing</string>

    <!-- Datos personales -->
    <string name="Nombre">Name: </string>
    <string name="Edad">Age: </string>
    <string name="Correo">Mail: </string>
    <string name="Peso">Weight</string>
    <string name="TituloSwitch">Enable customized alerts</string>
    <string name="Alertas"> Vibrating alerts at </string>
    <string name="lpmAbreviado">bpm</string>

    <!-- Configuracion -->
    <string name="Configuracion"> Configuration </string>

    <!-- Historial -->
    <string name="Historial"> History</string>
    <string name="Fecha">Date: </string>
    <string name="title_activity_grafica_main">graficaMain</string>


</resources>
